# Futures-Trading-Bot

./: .env.example  .gitignore  CLAUDE.md  PROJECT_SPEC.md  README.md  pyproject.toml
.obsidian/: community-plugins.json  graph.json  workspace.json
brain/: 00 Home.md
config/: data.yaml  data_gc.yaml  data_mes.yaml  data_mgc.yaml  gc_phase11.yaml  gc_phase12.yaml  lucid_100k.yaml  lucid_25k.yaml  lucid_50k.yaml  mgc_phase13.yaml  phase10.yaml  phase15_scalp.yaml  phase16_structure.yaml  phase17_orb_enhance.yaml  phase18_deep.yaml  phase19_eval_policy.yaml  phase7.yaml  phase8.yaml  phase9.yaml  recommendation.yaml  strategies.yaml  strategies_gc.yaml  strategies_mgc.yaml  validation.yaml
docs/: LUCID_RULES_VERIFIED.md  PHASE_10_REPORT.md  PHASE_11_PROMPT.md  PHASE_11_REPORT.md  PHASE_12_REPORT.md  PHASE_13_PROMPT.md  PHASE_13_REPORT.md  PHASE_14_PROMPT.md  PHASE_14_REPORT.md  PHASE_15_REPORT.md  PHASE_16_REPORT.md  PHASE_17_REPORT.md  PHASE_18_REPORT.md  PHASE_18_SCOPE.md  PHASE_19_REPORT.md  PHASE_1_PLAN.md  PHASE_7_PROMPT.md  PHASE_7_REPORT.md  PHASE_8_REPORT.md  PHASE_9_REPORT.md  PROJECT_STATUS.md
scripts/: build_bars.py  compare_tradingview.py  inspect_data.py  run_backtest.py  run_evaluation_simulation.py  run_phase10_mes.py  run_phase11.py  run_phase12.py  run_phase13_mgc.py  run_phase14_100k.py  run_phase15_scalp.py  run_phase16.py  run_phase17.py  run_phase18.py  run_phase19.py  run_phase20_joint_mc.py  run_phase21_rescore.py  run_phase22_funded_sizing.py  run_phase23_gold_article.py  run_phase7.py  run_phase8.py  run_phase9.py  run_rebacktest_orb_w.py  (+3 more)
(+223 files in other folders)
