[project]
name = "mnq-evaluation-research"
version = "0.1.0"
description = "MNQ futures strategy research and Lucid Flex evaluation pass-probability simulation"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0",
    "pyarrow>=15.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "zstandard>=0.22",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
